--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-8">
-        <h1>Ukraine crisis: separatists order full military mobilisation; ‘40% of Russian forces’ in attack position – live</h1>
+        <h1>Ukraine crisis: separatists order <br> full military mobilisation; ‘40% of <br> Russian forces’ in attack <br> position – live</h1>
       </div>
       <div class="col"></div>
     </div>
@@ -24,7 +24,7 @@
       <div class="col"></div>
       <div class="col-12">
         <div class="col">
-          <img style="width: fit-content;" src="image 1.png" alt="immagine">
+          <img src="static/images/image1.png" alt="image">
         </div>
       </div>
     </div>
@@ -33,9 +33,12 @@
       <div class="col">
       </div>
       <div class="col-8">
-        <p>Millions experienced severe disruption as record-breaking winds from Storm Eunice caused death and injury, huge structural damage, transport chaos and widespread power cuts. <br>
-          Four people were confirmed to have died in the UK and Ireland by Friday evening. The Met Office said a wind speed of up to 122mph was recorded at the Needles on the Isle of Wight on Friday, provisionally the highest ever in England, and described the storm as the worst since the Burn’s Day storm 32 years ago in which 47 people died. <br>
-          About a third of the UK population – about 20 million people – were told to stay at home as the Met Office imposed two rare red warnings for much of southern England, south Wales and London. <br> 
+        <p>Millions experienced severe disruption as record-breaking winds from Storm Eunice caused death and injury, huge structural damage, transport chaos and widespread power cuts. <br><br>
+
+          Four people were confirmed to have died in the UK and Ireland by Friday evening. The Met Office said a wind speed of up to 122mph was recorded at the Needles on the Isle of Wight on Friday, provisionally the highest ever in England, and described the storm as the worst since the Burn’s Day storm 32 years ago in which 47 people died. <br><br>
+         
+          About a third of the UK population – about 20 million people – were told to stay at home as the Met Office imposed two rare red warnings for much of southern England, south Wales and London. <br><br>
+         
           The disruption closed thousands of schools and businesses. About 435,000 homes were left without power early on Friday evening. Hundreds of train services and flights were cancelled, and major roads closed.</p>
       </div>
       <div class="col">
@@ -45,11 +48,10 @@
     <div class="row">
       <div class="col-2"></div>
       <div class="col">
-        <h3> <br> </h3>
+        <h3>Chiricallo<br>Pietro</h3>
       </div>
     </div>
       </div>
 </body>
 
 </html>
-
